--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -36,6 +37,7 @@ android {
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
         kotlinCompilerVersion '1.5.21'
@@ -87,6 +89,10 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
 
     implementation 'io.coil-kt:coil-compose:1.3.2'
+
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+
+
 
 
 }
