implementado firebase en la autenticacion modificado login para iniciar sesion con las credenciales correcras, si no, manda un mensaje de error Modificado register para crear un usuario y y perfil de usuario con su info personal modificado pfofile para incuir los datos del usuario logueado modificado reset para que mande un correo de recuperacion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.bottomnavbardemo"
@@ -32,7 +33,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
+        //useIR = true
     }
     buildFeatures {
         compose true
@@ -40,7 +41,7 @@ android {
 
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerVersion '1.7.1'
     }
     packagingOptions {
         resources {
@@ -64,6 +65,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -88,7 +91,7 @@ dependencies {
     // Zxing
     implementation 'com.google.zxing:core:3.3.3'
 
-    implementation 'io.coil-kt:coil-compose:1.3.2'
+    implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
 
     implementation "androidx.navigation:navigation-compose:2.4.2"
 
